# HandsClapping

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: README_en.md  README_zh.md  TUTORIAL_en.md  TUTORIAL_zh.md
src/: README.md  handsclapping_pylib.cpp
src/AI/: tensor.h
src/AI/HDP/app/: demo_HDP_Idiot.cpp  game_1v1.cpp  training.cpp
src/AI/HDP/include/: game_api.cpp  game_api.h  model.cpp  model.h  policy.cpp  policy.h  state.cpp  state.h  winning_rate.cpp  winning_rate.h
src/AI/HDP_pro/: battle.py  config.yaml  initialization.py  metrics.py  model.py  train.py  visualization.py
src/AI/Idiot/app/: analysis_tool.cpp  demo.cpp  game_1v1.cpp  group_training.cpp  hybrid_training.cpp  policy_init.cpp  tools.cpp  training.cpp
src/AI/Idiot/include/: policy.cpp  policy.h  tensor.h
src/AI/app/: demo.cpp  game_1v1.cpp
src/app/: handsclapping_game.cpp  handsclapping_game_debug.cpp  handsclapping_referee.cpp
src/game/: action.cpp  action.h  battle_field.cpp  battle_field.h  define_actions.cpp  define_actions.h  player.cpp  player.h  referee.cpp  referee.h
src/online/: client.py  client_mobile.py  handsclapping_game_online.py  server.py  test.py
